--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@
     width: 300px;
     height: 300px;
 }
-.rpg{
+.arpg{
     background-image: url(../img/fondo\ juegos.jpg);
     background-size: cover;
     background-position: center;
